syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "ChatServiceGrpc";

package ChatService;

service ChatService {
  rpc SendMessage (Message) returns (google.protobuf.Empty);
  rpc SubscribeMessages(google.protobuf.Empty) returns (stream PublishedMessage);
}

message Message {
  string text = 1;
}

message PublishedMessage {
  string username = 1;
  string text = 2;
}